# simple-mistral-api-client

./: .gitignore  README.md  mistral_api_cli.py  mistral_api_web.py  pyproject.toml  requirements.txt
